[gd_scene load_steps=6 format=4 uid="uid://dyxe0r6xbglq0"]

[ext_resource type="Script" uid="uid://dss6cre7acsti" path="res://Menu/main_menu.gd" id="1_fw3rq"]
[ext_resource type="Texture2D" uid="uid://ewchotfxw5sk" path="res://NewAssets/Tiny Swords (Free Pack)/Terrain/Water Background color.png" id="1_sla5p"]
[ext_resource type="TileSet" uid="uid://vvhkbecwew3d" path="res://Scenes/Ground.tres" id="2_ci1se"]
[ext_resource type="TileSet" uid="uid://bpf6f6qouayim" path="res://Scenes/Foam.tres" id="2_dtkyu"]
[ext_resource type="PackedScene" uid="uid://r04t35o2g5x4" path="res://Menu/button.tscn" id="4_ohgnh"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_fw3rq")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1024.0001, 576)
scale = Vector2(32, 18)
texture = ExtResource("1_sla5p")

[node name="Foam" type="TileMapLayer" parent="."]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAAZAAwAAgAAAAAAAQAYAAwAAgAAAAAAAQAYAAsAAgAAAAAAAQAZAAsAAgAAAAAAAQAZAAoAAgAAAAAAAQAYAAoAAgAAAAAAAQAYAAkAAgAAAAAAAQAZAAkAAgAAAAAAAQAaAAgAAgAAAAAAAQAbAAkAAgAAAAAAAQAcAAoAAgAAAAAAAQAcAAsAAgAAAAAAAQAcAAwAAgAAAAAAAQAdAAwAAgAAAAAAAQAdAAsAAgAAAAAAAQAdAAoAAgAAAAAAAQAdAAkAAgAAAAAAAQAbAAgAAgAAAAAAAQAZAAgAAgAAAAAAAQAYAAgAAgAAAAAAAQAYAAcAAgAAAAAAAQAaAAcAAgAAAAAAAQAbAAcAAgAAAAAAAQAcAAcAAgAAAAAAAQAYAAYAAgAAAAAAAQAZAAYAAgAAAAAAAQAcAAYAAgAAAAAAAQAdAAYAAgAAAAAAAQAcAAUAAgAAAAAAAQAdAAUAAgAAAAAAAQAZAAUAAgAAAAAAAQAYAAUAAgAAAAAAAQAYAAQAAgAAAAAAAQAZAAQAAgAAAAAAAQAaAAQAAgAAAAAAAQAbAAQAAgAAAAAAAQAcAAQAAgAAAAAAAQAbAAMAAgAAAAAAAQAaAAMAAgAAAAAAAQAZAAMAAgAAAAAAAQAYAAMAAgAAAAAAAQAcAAkAAgAAAAAAAQAhAAwAAgAAAAAAAQAiAAwAAgAAAAAAAQAjAAwAAgAAAAAAAQAkAAwAAgAAAAAAAQAgAAsAAgAAAAAAAQAhAAsAAgAAAAAAAQAiAAsAAgAAAAAAAQAjAAsAAgAAAAAAAQAkAAsAAgAAAAAAAQAlAAsAAgAAAAAAAQAlAAoAAgAAAAAAAQAkAAoAAgAAAAAAAQAhAAoAAgAAAAAAAQAgAAoAAgAAAAAAAQAgAAUAAgAAAAAAAQAgAAYAAgAAAAAAAQAgAAcAAgAAAAAAAQAgAAgAAgAAAAAAAQAhAAUAAgAAAAAAAQAhAAYAAgAAAAAAAQAhAAcAAgAAAAAAAQAhAAgAAgAAAAAAAQAhAAkAAgAAAAAAAQAgAAkAAgAAAAAAAQAkAAUAAgAAAAAAAQAkAAYAAgAAAAAAAQAkAAcAAgAAAAAAAQAkAAgAAgAAAAAAAQAkAAkAAgAAAAAAAQAlAAUAAgAAAAAAAQAlAAYAAgAAAAAAAQAlAAcAAgAAAAAAAQAlAAgAAgAAAAAAAQAlAAkAAgAAAAAAAQAlAAQAAgAAAAAAAQAkAAQAAgAAAAAAAQAjAAQAAgAAAAAAAQAiAAQAAgAAAAAAAQAhAAQAAgAAAAAAAQAgAAQAAgAAAAAAAQAhAAMAAgAAAAAAAQAiAAMAAgAAAAAAAQAjAAMAAgAAAAAAAQAkAAMAAgAAAAAAAQAtAAwAAgAAAAAAAQAsAAwAAgAAAAAAAQArAAwAAgAAAAAAAQAqAAwAAgAAAAAAAQAtAAsAAgAAAAAAAQAsAAsAAgAAAAAAAQArAAsAAgAAAAAAAQAqAAsAAgAAAAAAAQApAAsAAgAAAAAAAQAtAAoAAgAAAAAAAQAsAAoAAgAAAAAAAQAqAAoAAgAAAAAAAQApAAoAAgAAAAAAAQAoAAoAAgAAAAAAAQApAAkAAgAAAAAAAQAoAAkAAgAAAAAAAQAsAAkAAgAAAAAAAQAtAAkAAgAAAAAAAQAtAAgAAgAAAAAAAQAsAAgAAgAAAAAAAQAtAAcAAgAAAAAAAQAsAAcAAgAAAAAAAQApAAgAAgAAAAAAAQAoAAgAAgAAAAAAAQApAAcAAgAAAAAAAQAoAAcAAgAAAAAAAQApAAYAAgAAAAAAAQAoAAYAAgAAAAAAAQAoAAUAAgAAAAAAAQApAAUAAgAAAAAAAQAqAAUAAgAAAAAAAQApAAQAAgAAAAAAAQAqAAQAAgAAAAAAAQArAAQAAgAAAAAAAQAsAAQAAgAAAAAAAQAtAAQAAgAAAAAAAQAqAAMAAgAAAAAAAQArAAMAAgAAAAAAAQAsAAMAAgAAAAAAAQAtAAMAAgAAAAAAAQAxAAwAAgAAAAAAAQAyAAwAAgAAAAAAAQAzAAwAAgAAAAAAAQA0AAwAAgAAAAAAAQA1AAsAAgAAAAAAAQA0AAsAAgAAAAAAAQAzAAsAAgAAAAAAAQAyAAsAAgAAAAAAAQAxAAsAAgAAAAAAAQAwAAsAAgAAAAAAAQAwAAoAAgAAAAAAAQAxAAoAAgAAAAAAAQAxAAMAAgAAAAAAAQAxAAQAAgAAAAAAAQAxAAUAAgAAAAAAAQAxAAYAAgAAAAAAAQAxAAcAAgAAAAAAAQAxAAgAAgAAAAAAAQAxAAkAAgAAAAAAAQAwAAMAAgAAAAAAAQAwAAQAAgAAAAAAAQAwAAUAAgAAAAAAAQAwAAYAAgAAAAAAAQAwAAcAAgAAAAAAAQAwAAgAAgAAAAAAAQAwAAkAAgAAAAAAAQA0AAMAAgAAAAAAAQA0AAQAAgAAAAAAAQA0AAUAAgAAAAAAAQA0AAYAAgAAAAAAAQA0AAcAAgAAAAAAAQA0AAgAAgAAAAAAAQA0AAkAAgAAAAAAAQA0AAoAAgAAAAAAAQA1AAMAAgAAAAAAAQA1AAQAAgAAAAAAAQA1AAUAAgAAAAAAAQA1AAYAAgAAAAAAAQA1AAcAAgAAAAAAAQA1AAgAAgAAAAAAAQA1AAkAAgAAAAAAAQA1AAoAAgAAAAAAAQA9AAwAAgAAAAAAAQA8AAwAAgAAAAAAAQA7AAwAAgAAAAAAAQA6AAwAAgAAAAAAAQA5AAwAAgAAAAAAAQA9AAsAAgAAAAAAAQA8AAsAAgAAAAAAAQA7AAsAAgAAAAAAAQA6AAsAAgAAAAAAAQA5AAsAAgAAAAAAAQA4AAsAAgAAAAAAAQA5AAoAAgAAAAAAAQA4AAoAAgAAAAAAAQA5AAkAAgAAAAAAAQA4AAkAAgAAAAAAAQA7AAgAAgAAAAAAAQA6AAgAAgAAAAAAAQA5AAgAAgAAAAAAAQA4AAgAAgAAAAAAAQA7AAcAAgAAAAAAAQA6AAcAAgAAAAAAAQA5AAcAAgAAAAAAAQA4AAcAAgAAAAAAAQA5AAYAAgAAAAAAAQA4AAYAAgAAAAAAAQA5AAUAAgAAAAAAAQA4AAUAAgAAAAAAAQA5AAQAAgAAAAAAAQA4AAQAAgAAAAAAAQA6AAQAAgAAAAAAAQA7AAQAAgAAAAAAAQA8AAQAAgAAAAAAAQA9AAQAAgAAAAAAAQA5AAMAAgAAAAAAAQA6AAMAAgAAAAAAAQA7AAMAAgAAAAAAAQA8AAMAAgAAAAAAAQA9AAMAAgAAAAAAAQBIAAwAAgAAAAAAAQBJAAwAAgAAAAAAAQBIAAUAAgAAAAAAAQBIAAYAAgAAAAAAAQBIAAcAAgAAAAAAAQBIAAgAAgAAAAAAAQBIAAkAAgAAAAAAAQBIAAoAAgAAAAAAAQBIAAsAAgAAAAAAAQBJAAUAAgAAAAAAAQBJAAYAAgAAAAAAAQBJAAcAAgAAAAAAAQBJAAgAAgAAAAAAAQBJAAkAAgAAAAAAAQBJAAoAAgAAAAAAAQBJAAsAAgAAAAAAAQBGAAQAAgAAAAAAAQBHAAQAAgAAAAAAAQBIAAQAAgAAAAAAAQBJAAQAAgAAAAAAAQBKAAQAAgAAAAAAAQBLAAQAAgAAAAAAAQBLAAMAAgAAAAAAAQBKAAMAAgAAAAAAAQBJAAMAAgAAAAAAAQBIAAMAAgAAAAAAAQBHAAMAAgAAAAAAAQBGAAMAAgAAAAAAAQBOAAwAAgAAAAAAAQBPAAwAAgAAAAAAAQBOAAMAAgAAAAAAAQBOAAQAAgAAAAAAAQBOAAUAAgAAAAAAAQBOAAYAAgAAAAAAAQBPAAYAAgAAAAAAAQBPAAcAAgAAAAAAAQBPAAgAAgAAAAAAAQBPAAkAAgAAAAAAAQBPAAoAAgAAAAAAAQBPAAsAAgAAAAAAAQBOAAsAAgAAAAAAAQBOAAoAAgAAAAAAAQBOAAkAAgAAAAAAAQBOAAgAAgAAAAAAAQBOAAcAAgAAAAAAAQBPAAMAAgAAAAAAAQBPAAQAAgAAAAAAAQBPAAUAAgAAAAAAAQBSAAwAAgAAAAAAAQBTAAwAAgAAAAAAAQBUAAwAAgAAAAAAAQBVAAwAAgAAAAAAAQBWAAsAAgAAAAAAAQBVAAsAAgAAAAAAAQBUAAsAAgAAAAAAAQBTAAsAAgAAAAAAAQBSAAsAAgAAAAAAAQBSAAoAAgAAAAAAAQBTAAoAAgAAAAAAAQBWAAoAAgAAAAAAAQBXAAoAAgAAAAAAAQBXAAUAAgAAAAAAAQBXAAYAAgAAAAAAAQBXAAcAAgAAAAAAAQBXAAgAAgAAAAAAAQBXAAkAAgAAAAAAAQBWAAUAAgAAAAAAAQBWAAYAAgAAAAAAAQBWAAcAAgAAAAAAAQBWAAgAAgAAAAAAAQBWAAkAAgAAAAAAAQBTAAUAAgAAAAAAAQBTAAYAAgAAAAAAAQBTAAcAAgAAAAAAAQBTAAgAAgAAAAAAAQBTAAkAAgAAAAAAAQBSAAUAAgAAAAAAAQBSAAYAAgAAAAAAAQBSAAcAAgAAAAAAAQBSAAgAAgAAAAAAAQBSAAkAAgAAAAAAAQBSAAQAAgAAAAAAAQBTAAQAAgAAAAAAAQBUAAQAAgAAAAAAAQBVAAQAAgAAAAAAAQBWAAQAAgAAAAAAAQBVAAMAAgAAAAAAAQBUAAMAAgAAAAAAAQBTAAMAAgAAAAAAAQBSAAMAAgAAAAAAAQBfAAwAAgAAAAAAAQBeAAwAAgAAAAAAAQBdAAwAAgAAAAAAAQBcAAwAAgAAAAAAAQBbAAwAAgAAAAAAAQBfAAsAAgAAAAAAAQBeAAsAAgAAAAAAAQBdAAsAAgAAAAAAAQBcAAsAAgAAAAAAAQBbAAsAAgAAAAAAAQBaAAsAAgAAAAAAAQBbAAoAAgAAAAAAAQBaAAoAAgAAAAAAAQBbAAkAAgAAAAAAAQBaAAkAAgAAAAAAAQBaAAgAAgAAAAAAAQBbAAgAAgAAAAAAAQBcAAgAAgAAAAAAAQBdAAgAAgAAAAAAAQBdAAcAAgAAAAAAAQBcAAcAAgAAAAAAAQBbAAcAAgAAAAAAAQBaAAcAAgAAAAAAAQBbAAYAAgAAAAAAAQBaAAYAAgAAAAAAAQBbAAUAAgAAAAAAAQBaAAUAAgAAAAAAAQBaAAQAAgAAAAAAAQBbAAQAAgAAAAAAAQBcAAQAAgAAAAAAAQBdAAQAAgAAAAAAAQBeAAQAAgAAAAAAAQBfAAQAAgAAAAAAAQBbAAMAAgAAAAAAAQBcAAMAAgAAAAAAAQBdAAMAAgAAAAAAAQBeAAMAAgAAAAAAAQBfAAMAAgAAAAAAAQBiAAwAAgAAAAAAAQBjAAwAAgAAAAAAAQBkAAwAAgAAAAAAAQBlAAwAAgAAAAAAAQBmAAwAAgAAAAAAAQBiAAsAAgAAAAAAAQBjAAsAAgAAAAAAAQBkAAsAAgAAAAAAAQBlAAsAAgAAAAAAAQBmAAsAAgAAAAAAAQBnAAsAAgAAAAAAAQBmAAoAAgAAAAAAAQBnAAoAAgAAAAAAAQBmAAkAAgAAAAAAAQBnAAkAAgAAAAAAAQBjAAgAAgAAAAAAAQBkAAgAAgAAAAAAAQBlAAgAAgAAAAAAAQBmAAgAAgAAAAAAAQBnAAgAAgAAAAAAAQBmAAcAAgAAAAAAAQBlAAcAAgAAAAAAAQBkAAcAAgAAAAAAAQBjAAcAAgAAAAAAAQBiAAcAAgAAAAAAAQBjAAYAAgAAAAAAAQBiAAYAAgAAAAAAAQBjAAUAAgAAAAAAAQBiAAUAAgAAAAAAAQBiAAQAAgAAAAAAAQBjAAQAAgAAAAAAAQBkAAQAAgAAAAAAAQBlAAQAAgAAAAAAAQBmAAQAAgAAAAAAAQBnAAQAAgAAAAAAAQBjAAMAAgAAAAAAAQBkAAMAAgAAAAAAAQBlAAMAAgAAAAAAAQBmAAMAAgAAAAAAAQBnAAMAAgAAAAAAAQA=")
tile_set = ExtResource("2_dtkyu")

[node name="Text" type="TileMapLayer" parent="."]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAAYAAMAAAAFAAEAAAAZAAIAAAAGAAAAAAAZAAMAAAAGAAEAAAAaAAMAAAAGAAIAAAAaAAIAAAAGAAAAAAAbAAMAAAAGAAIAAAAcAAMAAAAHAAAAAAAcAAQAAAAFAAEAAAAdAAQAAAAHAAAAAAAdAAUAAAAHAAIAAAAcAAUAAAAFAAEAAAAcAAYAAAAHAAIAAAAbAAYAAAAGAAAAAAAbAAcAAAAHAAEAAAAbAAgAAAAFAAIAAAAcAAgAAAAGAAAAAAAaAAYAAAAGAAAAAAAaAAcAAAAGAAIAAAAZAAYAAAAGAAEAAAAZAAcAAAAGAAEAAAAYAAcAAAAFAAEAAAAYAAYAAAAFAAEAAAAYAAUAAAAFAAEAAAAYAAQAAAAFAAEAAAAZAAQAAAAHAAEAAAAZAAUAAAAHAAEAAAAZAAgAAAAHAAEAAAAZAAkAAAAHAAEAAAAZAAoAAAAHAAEAAAAZAAsAAAAHAAIAAAAYAAsAAAAFAAIAAAAYAAoAAAAFAAEAAAAYAAkAAAAFAAEAAAAYAAgAAAAFAAEAAAAdAAgAAAAHAAAAAAAdAAkAAAAHAAEAAAAcAAoAAAAFAAEAAAAcAAkAAAAFAAEAAAAdAAoAAAAHAAEAAAAdAAsAAAAHAAIAAAAcAAsAAAAFAAIAAAAYAAIAAAAFAAAAAAAgAAQAAAAFAAEAAAAhAAQAAAAHAAEAAAAhAAMAAAAGAAEAAAAiAAMAAAAGAAIAAAAiAAIAAAAGAAAAAAAjAAMAAAAGAAIAAAAjAAIAAAAGAAAAAAAkAAMAAAAGAAEAAAAkAAQAAAAFAAEAAAAlAAQAAAAHAAEAAAAlAAUAAAAHAAEAAAAkAAUAAAAFAAEAAAAkAAYAAAAFAAEAAAAkAAcAAAAFAAEAAAAkAAgAAAAFAAEAAAAlAAcAAAAHAAEAAAAlAAYAAAAHAAEAAAAlAAgAAAAHAAEAAAAlAAkAAAAHAAEAAAAkAAkAAAAFAAEAAAAkAAoAAAAGAAEAAAAjAAoAAAAGAAAAAAAjAAsAAAAGAAIAAAAiAAsAAAAGAAIAAAAiAAoAAAAGAAAAAAAhAAoAAAAGAAEAAAAhAAkAAAAHAAEAAAAgAAkAAAAFAAEAAAAhAAgAAAAHAAEAAAAgAAgAAAAFAAEAAAAgAAcAAAAFAAEAAAAgAAYAAAAFAAEAAAAhAAYAAAAHAAEAAAAhAAcAAAAHAAEAAAAhAAUAAAAHAAEAAAAgAAUAAAAFAAEAAAAgAAMAAAAFAAAAAAAhAAIAAAAFAAAAAAAkAAIAAAAHAAAAAAAlAAMAAAAHAAAAAAAlAAoAAAAHAAIAAAAkAAsAAAAHAAIAAAAhAAsAAAAFAAIAAAAgAAoAAAAFAAIAAAAtAAIAAAAHAAAAAAAtAAMAAAAHAAIAAAAsAAMAAAAGAAIAAAAsAAIAAAAGAAAAAAArAAIAAAAGAAAAAAArAAMAAAAGAAIAAAAqAAIAAAAFAAAAAAAqAAMAAAAGAAEAAAApAAMAAAAFAAAAAAAqAAQAAAAHAAIAAAApAAQAAAAGAAEAAAAoAAQAAAAFAAAAAAAoAAUAAAAFAAEAAAApAAUAAAAHAAEAAAAoAAYAAAAFAAEAAAAoAAcAAAAFAAEAAAApAAcAAAAHAAEAAAApAAYAAAAHAAEAAAAoAAgAAAAFAAEAAAApAAgAAAAHAAEAAAApAAkAAAAGAAEAAAAoAAkAAAAFAAIAAAApAAoAAAAFAAIAAAAqAAkAAAAHAAAAAAAqAAoAAAAGAAEAAAAqAAsAAAAFAAIAAAArAAsAAAAGAAIAAAArAAoAAAAGAAAAAAAsAAsAAAAGAAIAAAAsAAoAAAAGAAEAAAAsAAkAAAAFAAEAAAAtAAoAAAAHAAEAAAAtAAkAAAAHAAEAAAAtAAsAAAAHAAIAAAAtAAgAAAAHAAEAAAAtAAcAAAAHAAEAAAAtAAYAAAAHAAAAAAAsAAYAAAAFAAAAAAAsAAcAAAAFAAEAAAAsAAgAAAAFAAEAAAAwAAIAAAAFAAAAAAAwAAMAAAAFAAEAAAAwAAQAAAAFAAEAAAAwAAUAAAAFAAEAAAAwAAYAAAAFAAEAAAAwAAcAAAAFAAEAAAAwAAgAAAAFAAEAAAAwAAkAAAAFAAEAAAAxAAoAAAAGAAEAAAAwAAoAAAAFAAIAAAAxAAsAAAAFAAIAAAAyAAsAAAAGAAIAAAAyAAoAAAAGAAAAAAAzAAoAAAAGAAAAAAA0AAoAAAAGAAEAAAA0AAsAAAAHAAIAAAA1AAoAAAAHAAIAAAA1AAkAAAAHAAEAAAA0AAkAAAAFAAEAAAA0AAgAAAAFAAEAAAA0AAcAAAAFAAEAAAA0AAYAAAAFAAEAAAA0AAUAAAAFAAEAAAA0AAQAAAAFAAEAAAA1AAQAAAAHAAEAAAA1AAMAAAAHAAEAAAA1AAIAAAAHAAAAAAA0AAIAAAAFAAAAAAA0AAMAAAAFAAEAAAA1AAUAAAAHAAEAAAA1AAYAAAAHAAEAAAA1AAcAAAAHAAEAAAA1AAgAAAAHAAEAAAAxAAkAAAAHAAEAAAAxAAgAAAAHAAEAAAAxAAcAAAAHAAEAAAAxAAYAAAAHAAEAAAAxAAUAAAAHAAEAAAAxAAQAAAAHAAEAAAAxAAMAAAAHAAEAAAAxAAIAAAAHAAAAAAA9AAIAAAAHAAAAAAA9AAMAAAAHAAIAAAA8AAMAAAAGAAIAAAA8AAIAAAAGAAAAAAA7AAIAAAAGAAAAAAA6AAIAAAAGAAAAAAA6AAMAAAAGAAIAAAA5AAIAAAAFAAAAAAA5AAMAAAAGAAEAAAA4AAMAAAAFAAAAAAA7AAMAAAAGAAIAAAA5AAQAAAAHAAEAAAA5AAUAAAAHAAEAAAA5AAYAAAAGAAEAAAA4AAYAAAAFAAEAAAA4AAUAAAAFAAEAAAA4AAQAAAAFAAEAAAA4AAcAAAAFAAEAAAA4AAgAAAAFAAEAAAA4AAkAAAAFAAEAAAA5AAgAAAAHAAEAAAA5AAcAAAAGAAEAAAA6AAYAAAAGAAAAAAA6AAcAAAAGAAIAAAA7AAYAAAAHAAAAAAA7AAcAAAAHAAIAAAA5AAkAAAAHAAEAAAA5AAoAAAAGAAEAAAA4AAoAAAAFAAIAAAA5AAsAAAAFAAIAAAA6AAsAAAAGAAIAAAA6AAoAAAAGAAAAAAA7AAoAAAAGAAAAAAA7AAsAAAAGAAIAAAA8AAsAAAAGAAIAAAA8AAoAAAAGAAAAAAA9AAoAAAAHAAAAAAA9AAsAAAAHAAIAAABGAAIAAAAFAAAAAABHAAIAAAAGAAAAAABIAAIAAAAGAAAAAABJAAIAAAAGAAAAAABKAAIAAAAGAAAAAABLAAIAAAAHAAAAAABLAAMAAAAHAAIAAABKAAMAAAAGAAIAAABJAAMAAAAGAAEAAABIAAMAAAAGAAEAAABHAAMAAAAGAAIAAABGAAMAAAAFAAIAAABIAAQAAAAFAAEAAABIAAUAAAAFAAEAAABIAAYAAAAFAAEAAABIAAcAAAAFAAEAAABIAAgAAAAFAAEAAABIAAkAAAAFAAEAAABIAAoAAAAFAAEAAABIAAsAAAAFAAIAAABJAAsAAAAHAAIAAABJAAoAAAAHAAEAAABJAAkAAAAHAAEAAABJAAgAAAAHAAEAAABJAAcAAAAHAAEAAABJAAYAAAAHAAEAAABJAAUAAAAHAAEAAABJAAQAAAAHAAEAAABOAAIAAAAFAAAAAABOAAMAAAAFAAEAAABOAAQAAAAFAAEAAABOAAUAAAAFAAEAAABOAAYAAAAFAAEAAABOAAcAAAAFAAEAAABOAAgAAAAFAAEAAABOAAkAAAAFAAEAAABOAAoAAAAFAAEAAABOAAsAAAAFAAIAAABPAAsAAAAHAAIAAABPAAoAAAAHAAEAAABPAAkAAAAHAAEAAABPAAgAAAAHAAEAAABPAAcAAAAHAAEAAABPAAYAAAAHAAEAAABPAAUAAAAHAAEAAABPAAQAAAAHAAEAAABPAAMAAAAHAAEAAABPAAIAAAAHAAAAAABVAAIAAAAHAAAAAABVAAMAAAAGAAIAAABUAAMAAAAGAAIAAABUAAIAAAAGAAAAAABTAAIAAAAGAAAAAABTAAMAAAAGAAEAAABSAAIAAAAFAAAAAABSAAMAAAAFAAEAAABSAAQAAAAFAAEAAABSAAUAAAAFAAEAAABSAAYAAAAFAAEAAABSAAcAAAAFAAEAAABSAAgAAAAFAAEAAABSAAkAAAAFAAEAAABTAAkAAAAHAAEAAABSAAoAAAAFAAEAAABSAAsAAAAFAAIAAABTAAsAAAAGAAIAAABTAAoAAAAGAAEAAABTAAgAAAAHAAEAAABTAAcAAAAHAAEAAABTAAYAAAAHAAEAAABTAAUAAAAHAAEAAABTAAQAAAAHAAEAAABUAAsAAAAGAAIAAABUAAoAAAAGAAAAAABVAAsAAAAHAAIAAABVAAoAAAAGAAAAAABWAAoAAAAHAAIAAABWAAkAAAAFAAEAAABXAAkAAAAHAAIAAABXAAgAAAAHAAEAAABXAAcAAAAHAAEAAABXAAYAAAAHAAEAAABXAAUAAAAHAAEAAABWAAUAAAAFAAEAAABWAAQAAAAFAAEAAABXAAQAAAAHAAAAAABWAAYAAAAFAAEAAABWAAcAAAAFAAEAAABWAAgAAAAFAAEAAABWAAMAAAAHAAAAAABfAAIAAAAHAAAAAABfAAMAAAAHAAIAAABeAAMAAAAGAAIAAABeAAIAAAAGAAAAAABdAAIAAAAGAAAAAABcAAMAAAAGAAIAAABbAAMAAAAGAAEAAABbAAIAAAAFAAAAAABcAAIAAAAGAAAAAABdAAMAAAAGAAIAAABaAAMAAAAFAAAAAABaAAQAAAAFAAEAAABaAAUAAAAFAAEAAABaAAYAAAAFAAEAAABaAAcAAAAFAAEAAABaAAgAAAAFAAEAAABaAAkAAAAFAAEAAABaAAoAAAAFAAIAAABbAAoAAAAGAAEAAABbAAsAAAAFAAIAAABbAAkAAAAHAAEAAABbAAgAAAAHAAEAAABbAAcAAAAGAAEAAABbAAYAAAAGAAEAAABbAAUAAAAHAAEAAABbAAQAAAAHAAEAAABcAAYAAAAGAAAAAABdAAYAAAAHAAAAAABdAAcAAAAHAAIAAABcAAcAAAAGAAIAAABcAAoAAAAGAAAAAABdAAoAAAAGAAAAAABeAAoAAAAGAAAAAABeAAsAAAAGAAIAAABfAAsAAAAHAAIAAABfAAoAAAAHAAAAAABdAAsAAAAGAAIAAABcAAsAAAAGAAIAAABnAAIAAAAHAAAAAABnAAMAAAAHAAIAAABmAAMAAAAGAAIAAABmAAIAAAAGAAAAAABlAAIAAAAGAAAAAABkAAIAAAAGAAAAAABkAAMAAAAGAAIAAABlAAMAAAAGAAIAAABjAAMAAAAGAAEAAABjAAIAAAAFAAAAAABiAAMAAAAFAAAAAABiAAQAAAAFAAEAAABjAAQAAAAHAAEAAABjAAUAAAAHAAEAAABiAAUAAAAFAAEAAABjAAYAAAAGAAEAAABiAAYAAAAFAAIAAABjAAcAAAAFAAIAAABkAAcAAAAGAAIAAABkAAYAAAAGAAAAAABlAAcAAAAGAAIAAABlAAYAAAAGAAAAAABmAAcAAAAGAAEAAABmAAYAAAAHAAAAAABnAAcAAAAHAAAAAABnAAgAAAAHAAEAAABnAAkAAAAHAAEAAABmAAkAAAAFAAEAAABmAAgAAAAFAAEAAABmAAoAAAAGAAEAAABnAAoAAAAHAAIAAABmAAsAAAAHAAIAAABlAAsAAAAGAAIAAABlAAoAAAAGAAAAAABkAAoAAAAGAAAAAABkAAsAAAAGAAIAAABjAAsAAAAGAAIAAABjAAoAAAAGAAAAAABiAAoAAAAFAAAAAABiAAsAAAAFAAIAAAAYAAwAAAAFAAUAAAAZAAwAAAAHAAUAAAAdAAwAAAAHAAUAAAAcAAwAAAAFAAUAAAAbAAkAAAAFAAUAAAAaAAgAAAAGAAUAAAAcAAcAAAAHAAUAAAAdAAYAAAAHAAUAAAAbAAQAAAAGAAUAAAAaAAQAAAAGAAUAAAAiAAQAAAAGAAUAAAAjAAQAAAAGAAUAAAAjAAwAAAAGAAUAAAAiAAwAAAAGAAUAAAAkAAwAAAAHAAUAAAAlAAsAAAAHAAUAAAAhAAwAAAAFAAUAAAAgAAsAAAAFAAUAAAAoAAoAAAAFAAUAAAApAAsAAAAFAAUAAAAqAAwAAAAFAAUAAAAtAAwAAAAHAAUAAAAsAAwAAAAGAAUAAAArAAwAAAAGAAUAAAAqAAUAAAAHAAUAAAAtAAQAAAAHAAUAAAAsAAQAAAAGAAUAAAArAAQAAAAGAAUAAAAwAAsAAAAFAAUAAAAxAAwAAAAFAAUAAAA0AAwAAAAHAAUAAAA1AAsAAAAHAAUAAAAzAAwAAAAGAAUAAAAyAAwAAAAGAAUAAAA4AAsAAAAFAAUAAAA5AAwAAAAFAAUAAAA9AAwAAAAHAAUAAAA8AAwAAAAGAAUAAAA7AAwAAAAGAAUAAAA6AAwAAAAGAAUAAAA7AAgAAAAHAAUAAAA9AAQAAAAHAAUAAAA6AAgAAAAGAAUAAAA8AAQAAAAGAAUAAAA7AAQAAAAGAAUAAAA6AAQAAAAGAAUAAABKAAQAAAAGAAUAAABHAAQAAAAGAAUAAABJAAwAAAAHAAUAAABLAAQAAAAHAAUAAABIAAwAAAAFAAUAAABGAAQAAAAFAAUAAABOAAwAAAAFAAUAAABPAAwAAAAHAAUAAABXAAoAAAAHAAUAAABWAAsAAAAHAAUAAABVAAwAAAAHAAUAAABSAAwAAAAFAAUAAABTAAwAAAAGAAUAAABUAAwAAAAGAAUAAABUAAQAAAAGAAUAAABVAAQAAAAGAAUAAABfAAQAAAAHAAUAAABdAAgAAAAHAAUAAABfAAwAAAAHAAUAAABbAAwAAAAFAAUAAABaAAsAAAAFAAUAAABcAAwAAAAGAAUAAABdAAwAAAAGAAUAAABeAAwAAAAGAAUAAABcAAgAAAAGAAUAAABcAAQAAAAGAAUAAABdAAQAAAAGAAUAAABeAAQAAAAGAAUAAABiAAcAAAAFAAUAAABjAAgAAAAFAAUAAABiAAwAAAAFAAUAAABnAAsAAAAHAAUAAABmAAwAAAAHAAUAAABnAAQAAAAHAAUAAABlAAwAAAAGAAUAAABkAAwAAAAGAAUAAABjAAwAAAAGAAUAAABkAAgAAAAGAAUAAABlAAgAAAAGAAUAAABmAAQAAAAGAAUAAABlAAQAAAAGAAUAAABkAAQAAAAGAAUAAAAbAAIAAAAHAAAAAAAzAAsAAAAGAAIAAAA=")
tile_set = ExtResource("2_ci1se")

[node name="Play" parent="." instance=ExtResource("4_ohgnh")]
position = Vector2(784, 416)
text = "PLAY"

[node name="Settings" parent="." instance=ExtResource("4_ohgnh")]
position = Vector2(784, 576)
text = "SETTINGS"

[node name="Quit" parent="." instance=ExtResource("4_ohgnh")]
position = Vector2(784, 736)
text = "QUIT"

[connection signal="buttonPress" from="Play" to="." method="_on_play_button_press"]
[connection signal="buttonPress" from="Settings" to="." method="_on_settings_button_press"]
[connection signal="buttonPress" from="Quit" to="." method="_on_quit_button_press"]
